--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,7 @@ inputs:
   working_directory:
     description: 'The fully qualified path to the directory where Terraform files are located'
     required: false
-    default: "${{ github.workspace }}"
+    default: "."
 runs:
     using: 'composite'
     steps:
